[project]
name = "hyrid-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
]
